[gd_scene load_steps=4 format=3 uid="uid://bp0pim2t0a55p"]

[ext_resource type="Script" path="res://movable_object.gd" id="1_wwywf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6yrpf"]
size = Vector2(50, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpgbd"]
size = Vector2(3, 44)

[node name="Box" type="CharacterBody2D"]
position = Vector2(676, 440)
collision_layer = 1024
script = ExtResource("1_wwywf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6yrpf")

[node name="LArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LArea"]
position = Vector2(-26.5, 1)
shape = SubResource("RectangleShape2D_wpgbd")
debug_color = Color(0.964389, 0, 0.493054, 0.42)

[node name="RArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RArea"]
position = Vector2(25, 1)
shape = SubResource("RectangleShape2D_wpgbd")
debug_color = Color(0.964389, 0, 0.493054, 0.42)

[connection signal="body_entered" from="LArea" to="." method="_on_l_area_body_entered"]
[connection signal="body_exited" from="LArea" to="." method="_on_l_area_body_exited"]
[connection signal="body_entered" from="RArea" to="." method="_on_r_area_body_entered"]
[connection signal="body_exited" from="RArea" to="." method="_on_r_area_body_exited"]
